[gd_scene load_steps=10 format=3 uid="uid://cpsg2qs50para"]

[ext_resource type="Script" uid="uid://bgit8wc2gug45" path="res://Scripts/GridItems/GridItem_Conveyor.gd" id="1_cd2dm"]
[ext_resource type="PhysicsMaterial" uid="uid://jvrfkcihkqvk" path="res://PhysicsMaterials/ConveyorBeltPhysicsMaterial.tres" id="2_h4j4h"]
[ext_resource type="Script" uid="uid://dnqpu3noj2rr6" path="res://Scripts/ConveyorBelt.gd" id="3_q3jgb"]
[ext_resource type="PhysicsMaterial" uid="uid://dri5hyc4yu142" path="res://PhysicsMaterials/MachinePhysicsMaterial.tres" id="4_xjrbk"]
[ext_resource type="PackedScene" uid="uid://b6874yg0tetqp" path="res://Meshes/ConveyorMesh.glb" id="5_abxu3"]
[ext_resource type="Material" uid="uid://hagnn4y4y1d0" path="res://Materials/ConveyorBelt.tres" id="6_galw3"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_bn5i1"]
points = PackedVector3Array(1, 1.65948, 0.999809, -1, 1.25, 1, 1, 1.25, 0.999809, 1, 1.65948, -1, -1, 1.65948, 0.999809, -1, 1.25, -1, 1, 1.25, -1, -1, 1.65948, -1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ux06k"]
points = PackedVector3Array(1.02, 1.75, 1.01999, 1.02, 1.75, 0.91999, -1.02, 1.75, 1.01999, 1.02, 1, 1.01999, 1.02, 1, 0.919833, -1.02, 1.75, 0.91999, -1.02, 1, 1.01999, -1.02, 1, 0.92)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_45bor"]
points = PackedVector3Array(1.02, 1.75, -0.92001, 1.02, 1.75, -1.02, -1.02, 1.75, -0.92001, -1.02, 1, -0.92, 1.02, 1, -0.92001, 1.02, 1, -1.02, -1.02, 1.75, -1.02, -1.02, 1, -1.02)

[node name="Conveyor" type="Node3D"]
script = ExtResource("1_cd2dm")

[node name="Belt" type="StaticBody3D" parent="."]
collision_mask = 0
physics_material_override = ExtResource("2_h4j4h")
script = ExtResource("3_q3jgb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Belt"]
transform = Transform3D(0, 0, 0.5, 0, 0.5, 0, -0.5, 0, 0, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_bn5i1")

[node name="Sides" type="StaticBody3D" parent="."]
collision_mask = 0
physics_material_override = ExtResource("4_xjrbk")

[node name="Right" type="CollisionShape3D" parent="Sides"]
transform = Transform3D(0, 0, 0.5, 0, 0.5, 0, -0.5, 0, 0, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_ux06k")

[node name="Left" type="CollisionShape3D" parent="Sides"]
transform = Transform3D(0, 0, 0.5, 0, 0.5, 0, -0.5, 0, 0, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_45bor")

[node name="Conveyor" parent="." instance=ExtResource("5_abxu3")]
physics_interpolation_mode = 2

[node name="ConveyorBelt" parent="Conveyor" index="0"]
physics_interpolation_mode = 2
surface_material_override/0 = ExtResource("6_galw3")

[node name="ConveyorRightSide" parent="Conveyor" index="1"]
physics_interpolation_mode = 2

[node name="ConveyorLeftSide" parent="Conveyor" index="2"]
physics_interpolation_mode = 2

[editable path="Conveyor"]
